use java 21 virtual threads instead of legacy threads.